fix text overflow

--- a/src/blocks/card/__source/card__source.css
+++ b/src/blocks/card/__source/card__source.css
@@ -11,7 +11,9 @@
   text-transform: uppercase;
   text-decoration: none;
   color: #b6bcbf;
-
+word-break: break-all;
+position: absolute;
+bottom: 10px;
 }
 
 @media screen and (max-width: 769px) {
