--- a/src/blocks/card/__title/card__title.css
+++ b/src/blocks/card/__title/card__title.css
@@ -9,6 +9,11 @@
   color: #1a1b22;
   margin: 12px 24px 0;
   max-width: 352px;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  word-break: break-word;
 }
 
 @media screen and (max-width: 769px) {
@@ -22,16 +27,9 @@
   }
 }
 @media screen and (max-width: 480px) {
-  .card__title  {
+  .card__title {
     min-height: 0;
     margin-top: 10px;
     max-width: 256px;
-    height: 48px;
-    white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
   }
 }
